--- a/ryanmcclue.html
+++ b/ryanmcclue.html
@@ -13,86 +13,85 @@
 
 <body>
 
-<section class="__RYANMCCLUE__">
-	<section class="ColLeft">
-	  <figure class="ColLeft__Headshot">
+<section class="__RYAN_MCCLUE__">
+	<section class="ColLeft__">
+	  <figure class="ColLeft__Headshot__">
 	    <img class="ColLeft__Headshot__Img" src="images/avatar.jpg" />
-	    <figcaption class="ColLeft__Headshot__Caption"> 
-		    <p class="ColLeft__Headshot__CaptionName">Ryan McClue</p> 
-		    <p class="ColLeft__Headshot__CaptionTwitterHandle">content</p>
+	    <figcaption class="ColLeft__Headshot__Caption__"> 
+		    <p class="ColLeft__Headshot__Caption__Name">
+				  Ryan McClue
+				</p> 
+		    <a class="ColLeft__Headshot__Caption__TwitterLink" href="#">
+				  @RyanMcclue
+				</a>
 	    </figcaption>
 	  </figure>
-	  <nav class="ColLeft__VertNav">
+	  <nav class="ColLeft__VertNav__">
 	    <button class="ColLeft__VertNav__OpenCloseButton"></button>
-	    <ul class="ColLeft__VertNav__LinksList">
-	      <li class="ColLeft__VertNav__LinkItem">
-					<a class="ColLeft__VertNav__Link" data-icon="&#x2a2f;" href="#">
+	    <ul class="ColLeft__VertNav__LinksList__">
+	      <li class="ColLeft__VertNav__LinksList__LinkItem__
+								   ColLeft__VertNav__LinksList__LinkItem--Home">
+				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="" />
+				  <a class="ColLeft__VertNav__LinksList__LinkItem__Link" href="#">
 						HOME
-					</a>
-				</li>
-	      <li class="ColLeft__VertNav__LinkItem">
-					<a class="ColLeft__VertNav__Link" href="#">
-						LINK2
-					</a>
-				</li>
-	      <li class="ColLeft__VertNav__LinkItem">
-					<a class="ColLeft__VertNav__Link" href="#">
-						LINK3
-					</a>
-				</li>
-	      <li class="ColLeft__VertNav__LinkItem">
-					<a class="ColLeft__VertNav__Link" href="#">
-						LINK4
-					</a>
-				</li>
+			    </a>
+		    </li>
+	      <li class="ColLeft__VertNav__LinksList__LinkItem__
+								   ColLeft__VertNav__LinksList__LinkItem--About">
+				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="" />
+				  <a class="ColLeft__VertNav__LinksList__LinkItem__Link" href="#">
+						ABOUT
+			    </a>
+		    </li>
+	      <li class="ColLeft__VertNav__LinksList__LinkItem__
+								   ColLeft__VertNav__LinksList__LinkItem--Projects">
+				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="" />
+				  <a class="ColLeft__VertNav__LinksList__LinkItem__Link" href="#">
+						PROJECTS
+			    </a>
+		    </li>
+	      <li class="ColLeft__VertNav__LinksList__LinkItem__
+								   ColLeft__VertNav__LinksList__LinkItem--Blog">
+				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="" />
+				  <a class="ColLeft__VertNav__LinksList__LinkItem__Link" href="#">
+						BLOG
+			    </a>
+		    </li>
+	      <li class="ColLeft__VertNav__LinksList__LinkItem__
+								   ColLeft__VertNav__LinksList__LinkItem--CONTACT">
+				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="" />
+				  <a class="ColLeft__VertNav__LinksList__LinkItem__Link" href="#">
+						CONTACT
+			    </a>
+		    </li>
 	    </ul>
 	  </nav>
+	</section>
+	<section class="ColRight__">
+		<main class="ColRight__Main__">
+				<article class="ColRight__Main__RowHome__">
+						<video class="ColRight__Main__RowHome__HeroVideo"
+								   src="">No browser support</video>
+				</article>
+				<article class="ColRight__Main__RowAbout__">
+						text here
+				</article>
+				<article class="ColRight__Main__RowProjects__">
+						text here
+				</article>
+				<article class="ColRight__Main__RowBlog__">
+						text here
+				</article>
+				<article class="ColRight__Main__RowContact__">
+						text here
+				</article>
+		</main>
+		<footer class="ColRight__RowFooter__">
+				text here
+		</footer>
 	</section>
 </section>
 
 </body>
 
 </html>
-
-<!--
-
-<section class="ColLeft">
-  <section class="ColLeft__LeftCol">
-    <header class="ColLeft__LeftColHeader">
-      <img src="" />
-      <h3>Ryan McClue</h3>
-      <h5>@ColLeft</h5>
-    </header>
-    <nav class="ColLeft__LeftColVerticalNav">
-      <ul>
-        <li>HOME</li>
-        <li>ABOUT</li>
-        <li>PROJECTS</li>
-        <li>BLOG</li>
-        <li>CONTACT</li>
-      </ul>
-    </nav>
-  </section>
-  <section class="ColLeft__RightCol">
-    <main class="ColLeft__RightColMain">
-      <header class="ColLeft__RightColHeroVideo">
-        <video src="" autoplay loop></video>
-        <h3>Hi! I'm</h3>
-        <h1>RYAN MCCLUE</h1>
-        <h3>EMULATORS/AI/GAMES/SYSTEMS</h3>
-      </header>
-    </main>
-    <footer class="ColLeft__RightColFooter"></footer>
-  </section>
-</section>
-
-/* chrome */
-.VertNav__Hamburger::-webkit-details-marker {
-  display: none;
-}
-/* firefox */
-details > summary:first-of-type {
-    list-style-type: none;
-}
-
--->
