introducing offline capabilities

--- a/ryanmcclue.html
+++ b/ryanmcclue.html
@@ -71,7 +71,7 @@
 		<main class="ColRight__Main__">
 				<article class="ColRight__Main__RowHome__">
 						<video class="ColRight__Main__RowHome__HeroVideo"
-								   src="">No browser support</video>
+								   src="videos/hero.mp4" autoplay loop>No browser support</video>
 				</article>
 				<article class="ColRight__Main__RowAbout__">
 						text here
