--- a/ryanmcclue.html
+++ b/ryanmcclue.html
@@ -11,19 +11,17 @@
   <title>Ryan McClue</title>
 </head>
 
-<body>
-
-<section class="__RYAN_MCCLUE__">
+<body class="__RYAN_MCCLUE__">
 	<section class="ColLeft__">
 	  <figure class="ColLeft__Headshot__">
 	    <img class="ColLeft__Headshot__Img" src="images/avatar.jpg" />
 	    <figcaption class="ColLeft__Headshot__Caption__"> 
-		    <p class="ColLeft__Headshot__Caption__Name">
-				  Ryan McClue
-				</p> 
+		    <span class="ColLeft__Headshot__Caption__Name">
+			  Ryan McClue
+			</span> 
 		    <a class="ColLeft__Headshot__Caption__TwitterLink" href="#">
-				  @RyanMcclue
-				</a>
+			  @RyanMcclue
+			</a>
 	    </figcaption>
 	  </figure>
 	  <nav class="ColLeft__VertNav__">
@@ -31,35 +29,35 @@
 	    <ul class="ColLeft__VertNav__LinksList__">
 	      <li class="ColLeft__VertNav__LinksList__LinkItem__
 								   ColLeft__VertNav__LinksList__LinkItem--Home">
-				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="" />
+				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="images/icons/home.svg" />
 				  <a class="ColLeft__VertNav__LinksList__LinkItem__Link" href="#">
 						HOME
 			    </a>
 		    </li>
 	      <li class="ColLeft__VertNav__LinksList__LinkItem__
 								   ColLeft__VertNav__LinksList__LinkItem--About">
-				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="" />
+				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="images/icons/bust.svg" />
 				  <a class="ColLeft__VertNav__LinksList__LinkItem__Link" href="#">
 						ABOUT
 			    </a>
 		    </li>
 	      <li class="ColLeft__VertNav__LinksList__LinkItem__
 								   ColLeft__VertNav__LinksList__LinkItem--Projects">
-				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="" />
+				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="images/icons/briefcase.svg" />
 				  <a class="ColLeft__VertNav__LinksList__LinkItem__Link" href="#">
 						PROJECTS
 			    </a>
 		    </li>
 	      <li class="ColLeft__VertNav__LinksList__LinkItem__
 								   ColLeft__VertNav__LinksList__LinkItem--Blog">
-				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="" />
+				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="images/icons/speech-bubbles.svg" />
 				  <a class="ColLeft__VertNav__LinksList__LinkItem__Link" href="#">
 						BLOG
 			    </a>
 		    </li>
 	      <li class="ColLeft__VertNav__LinksList__LinkItem__
 								   ColLeft__VertNav__LinksList__LinkItem--CONTACT">
-				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="" />
+				  <img class="ColLeft__VertNav__LinksList__LinkItem__Image" src="images/icons/envelope.svg" />
 				  <a class="ColLeft__VertNav__LinksList__LinkItem__Link" href="#">
 						CONTACT
 			    </a>
@@ -69,10 +67,10 @@
 	</section>
 	<section class="ColRight__">
 		<main class="ColRight__Main__">
-				<article class="ColRight__Main__RowHome__">
+				<header class="ColRight__Main__RowHome__">
 						<video class="ColRight__Main__RowHome__HeroVideo"
 								   src="videos/hero.mp4" autoplay loop>No browser support</video>
-				</article>
+				</header>
 				<article class="ColRight__Main__RowAbout__">
 						text here
 				</article>
